--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ img{max-width:100%;}
 body{
     padding: 0;
     margin: 0;
-    background: url(../images/2.jpg) no-repeat 0px 0px;
+    background: url(http://119.27.181.37/100/2.jpg) no-repeat 0px 0px;
 	background-size:cover;
     font-family: 'Roboto', sans-serif;
 	background-attachment: fixed;
